--- a/update_password.html
+++ b/update_password.html
@@ -2,47 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Update Password</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="card p-4 shadow-lg" style="width: 350px;">
-            <h3 class="text-center">Update Password</h3>
-            <form id="updatePasswordForm">
-                <div class="mb-3">
-                    <label for="old_password" class="form-label">Current Password</label>
-                    <input type="password" class="form-control" id="old_password" name="old_password" placeholder="Enter current password" required>
-                </div>
-                <div class="mb-3">
-                    <label for="new_password" class="form-label">New Password</label>
-                    <input type="password" class="form-control" id="new_password" name="new_password" placeholder="Enter new password" required>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Update Password</button>
-            </form>
-            <p class="text-danger mt-2 text-center" id="updateMessage"></p>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Update Your Password</h2>
+    <form id="updatePasswordForm">
+        <div class="form-group">
+            <label for="old_password">Current Password</label>
+            <input type="password" class="form-control" id="old_password" name="old_password" required>
         </div>
-    </div>
+        <div class="form-group">
+            <label for="new_password">New Password</label>
+            <input type="password" class="form-control" id="new_password" name="new_password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Update Password</button>
+    </form>
+    <p id="updateMessage" class="mt-3 text-center font-weight-bold"></p>
+</div>
 
-    <script>
-        document.getElementById("updatePasswordForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            
-            let formData = {
-                old_password: document.getElementById("old_password").value,
-                new_password: document.getElementById("new_password").value
-            };
-            
-            fetch("{{ url_for('update_password') }}", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "Authorization": "Bearer " + localStorage.getItem("access_token")  
-                },
-                body: JSON.stringify(formData)
-            })
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById("updateMessage").textC
+<script>
+document.getElementById("updatePasswordForm").addEventListener("submit", function(event) {
+    event.preventDefault();
+
+    let formData = {
+        old_password: document.getElementById("old_password").value,
+        new_password: document.getElementById("new_password").value
+    };
+
+    fetch("/update_password", {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json",
+            "Authorization": "Bearer " + localStorage.getItem("access_token")
+        },
+        body: JSON.stringify(formData)
+    })
+    .then(response => response.json())
+    .then(data => {
+        let msg = document.getElementById("updateMessage");
+        if (data.message) {
+            msg.classList.remove("text-danger");
+            msg.classList.add("text-success");
+            msg.textContent = data.message;
+        } else {
+            msg.classList.remove("text-success");
+            msg.classList.add("text-danger");
+            msg.textContent = data.error || "Failed to update password.";
+        }
+    })
+    .catch(error => {
+        document.getElementById("updateMessage").textContent = "Something went wrong.";
+    });
+});
+</script>
+
+</body>
+</html>
