--- a/signup.html
+++ b/signup.html
@@ -2,72 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup | HR Restaurant</title>
+    <title>Signup - HR.Restaurant</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- FIXED -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body>
-
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="card p-4 shadow-lg" style="width: 350px;">
-            <h3 class="text-center">Sign Up</h3>
-            <form id="signupForm" method="POST">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
+<body class="bg-light">
+    <div class="container mt-5">
+        <div class="col-md-6 offset-md-3">
+            <div class="card shadow-lg rounded-4">
+                <div class="card-header text-center bg-primary text-white">
+                    <h4>Create Your Account</h4>
                 </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required>
+                <div class="card-body">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                      {% if messages %}
+                        {% for category, message in messages %}
+                          <div class="alert alert-{{ category }}">{{ message }}</div>
+                        {% endfor %}
+                      {% endif %}
+                    {% endwith %}
+                    <form method="POST">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Full Name</label>
+                            <input type="text" name="name" id="name" class="form-control"
+                                   placeholder="Enter your full name" title="Full Name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input type="email" name="email" id="email" class="form-control"
+                                   placeholder="Enter your email" title="Email Address" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Create Password</label>
+                            <input type="password" name="password" id="password" class="form-control"
+                                   placeholder="Create a password" title="Password" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+                    </form>
+                    <p class="mt-3 text-center">Already have an account? 
+                        <a href="{{ url_for('login') }}">Login here</a>.
+                    </p>
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
-                </div>
-                <div class="mb-3">
-                    <label for="role" class="form-label">Role</label>
-                    <select class="form-control" id="role" name="role">
-                        <option value="customer">Customer</option>
-                        <option value="admin">Admin</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Sign Up</button>
-            </form>
-            <p class="text-danger mt-2 text-center" id="signupMessage"></p>
-            <p class="mt-3 text-center">Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+            </div>
         </div>
     </div>
-
-    <script>
-        document.getElementById("signupForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-
-            let formData = new FormData(this);
-
-            fetch("{{ url_for('signup') }}", {
-                method: "POST",
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                let messageElement = document.getElementById("signupMessage");
-                if (data.message) {
-                    messageElement.textContent = data.message;
-                    messageElement.classList.remove("text-danger");
-                    messageElement.classList.add("text-success");
-                    setTimeout(() => {
-                        window.location.href = "{{ url_for('login') }}";
-                    }, 1500);
-                } else {
-                    messageElement.textContent = data.error || "Signup failed!";
-                    messageElement.classList.remove("text-success");
-                    messageElement.classList.add("text-danger");
-                }
-            })
-            .catch(error => console.error("Error:", error));
-        });
-    </script>
-
 </body>
 </html>
